--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My simple website</title>
+    <link rel="stylesheet" href="styles/Blog.css">
 </head>
 <body>
-    
+    <div> 
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas reprehenderit tempora doloremque assumenda maxime repudiandae labore quas, id eos cupiditate mollitia similique ipsam ex. </p>
+    </div>
 </body>
 </html>
