added the second and third blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
         <h3>My first website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas reprehenderit tempora doloremque assumenda maxime repudiandae labore quas, id eos cupiditate mollitia similique ipsam ex. </p>
     </div>
+    <div> 
+        <h3>My second website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas reprehenderit tempora doloremque assumenda maxime repudiandae labore quas, id eos cupiditate mollitia similique ipsam ex. </p>
+    </div>
+    <div> 
+        <h3>My thirs
+             website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas reprehenderit tempora doloremque assumenda maxime repudiandae labore quas, id eos cupiditate mollitia similique ipsam ex. </p>
+    </div>
 </body>
 </html>
