added a list to push code

--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas reprehenderit tempora doloremque assumenda maxime repudiandae labore quas, id eos cupiditate mollitia similique ipsam ex. </p>
     </div>
     <div> 
-        <h3>My thirs
+        <h3>My third
              website</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur voluptas reprehenderit tempora doloremque assumenda maxime repudiandae labore quas, id eos cupiditate mollitia similique ipsam ex. </p>
+    </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add</li>
+            <li>git commit -m"meaningful message</li>
+            <li>git push</li>
+        </ul>
     </div>
 </body>
 </html>
